# course_add_serializer

./: pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: models.py  views.py
companies/migrations/: 0001_initial.py
first_django/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/vacancies/: test_retrieve_vacancy.py  test_vacancy_list.py  vacancy_create_test.py
vacancies/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options_and_more.py  0005_rename_create_vacancy_created.py  0006_skill_is_active.py  0007_vacancy_likes.py  0008_vacancy_min_experience.py  0009_vacancy_update_at.py
